fix: weird background cut off and large bottom page spacing (#177)

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -18,7 +18,6 @@
 */
 html {
 	background-color: $mainBgColor;
-    height: 0;
     min-height: 100%;
     display: flex;
     flex-direction: column;
